fix: URLEncoder use charset name for JDK 8-compatible compile
Made-with: Cursor